# cmake_tutorial_en

./: README.md
01_basic_commands/: CMakeLists.txt
02_simple_project/: CMakeLists.txt
03_improved_project/: CMakeLists.txt  using_libraries.c
04_organise_files/: CMakeLists.txt
04_organise_files/include/: myMath.h
04_organise_files/src/: myMath.c
05_external_library/: CMakeLists.txt
05_external_library/src/: gsl_nlin_function.c
06_create_library/: CMakeLists.txt
06_create_library/include/: gsl_routines.h
07_use_own_lib/: CMakeLists.txt
07_use_own_lib/src/: gsl_nlin_function.c
